create about page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Navbar start -->
      <nav>
         <div class="logo_cont">
-            <h4 class="logo">Teachme.</h4>
+            <h4 class="logo">Home Page</h4>
         </div>
         <div class="nav_links">
             <ul>
