create contact page

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="nav_links">
             <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="">About Us</a></li>
-                <li><a href="">Contact Us</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
      </nav>
